ui, nextcloud init

--- a/tpl/UI/Component/Dropdown/Item.html
+++ b/tpl/UI/Component/Dropdown/Item.html
@@ -1,9 +1,1 @@
-<?php
-
-/**
- * @author      Björn Heyser <info@bjoernheyser.de>
- */
-class Item
-{
-
-}
+<a class="dropdown-item {$CLASSES}" href="{$HREF}">{$LABEL}</a>
