--- a/tpl/UI/Component/Dropdown/Menu.html
+++ b/tpl/UI/Component/Dropdown/Menu.html
@@ -1,11 +1,10 @@
-<div class="dropdown">
+<div class="dropdown {$CLASSES}">
     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Dropdown link
+        {$LABEL}
     </a>
-
     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
+        {foreach $ITEMS as $ITEM}
+            {$ITEM}
+        {/foreach}
     </div>
 </div>
