--- a/tpl/UI/Component/Dropdown/Item.html
+++ b/tpl/UI/Component/Dropdown/Item.html
@@ -1,1 +1,1 @@
-<a class="dropdown-item {$CLASSES}" href="{$HREF}">{$LABEL}</a>
+<li><a class="dropdown-item {$CLASSES}" href="{$HREF}">{$LABEL}</a></li>
