changes to dropdown

--- a/tpl/UI/Component/Dropdown/Menu.html
+++ b/tpl/UI/Component/Dropdown/Menu.html
@@ -1,5 +1,5 @@
-<div class="dropdown {$CLASSES}">
-    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+<div class="dropdown">
+    <a class="{$CLASSES} dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
         {$LABEL}
     </a>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
