--- a/tpl/UI/Component/Dropdown/LinkItem.html
+++ b/tpl/UI/Component/Dropdown/LinkItem.html
@@ -1,1 +1,5 @@
-<li><a class="dropdown-item {$CLASSES}" href="{$HREF}">{$LABEL}</a></li>
+<li>
+    <a class="dropdown-item {$CLASSES}" href="{$HREF}">
+        {$IMAGE}{$LABEL}
+    </a>
+</li>
