--- a/tpl/UI/Component/Dropdown/Menu.html
+++ b/tpl/UI/Component/Dropdown/Menu.html
@@ -1,6 +1,6 @@
 <div class="dropdown">
     <a class="{$CLASSES} dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-        {$LABEL}
+        {$IMAGE}{$LABEL}
     </a>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         {foreach $ITEMS as $ITEM}
