--- a/tpl/UI/Layout/Page/header_content_footer.html
+++ b/tpl/UI/Layout/Page/header_content_footer.html
@@ -1,3 +1,3 @@
-<div>{$HEADER}</div>
-<div>{$CONTENT}</div>
-<div>{$FOOTER}</div>
+<div class="layoutHeader">{$HEADER}</div>
+<div class="layoutBody">{$CONTENT}</div>
+<div class="layoutFooter">{$FOOTER}</div>
