--- a/css/iit-ui.css
+++ b/css/iit-ui.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+
 /* LAYOUT */
 
 body {
@@ -55,6 +57,10 @@ table td, table th {
 .formLabel {
     border-bottom: solid 1px #747474;
     margin-bottom: 40px;
+}
+
+.formContainer .col {
+    margin-bottom: 15px;
 }
 
 fieldset {
