--- a/tpl/UI/Component/Form/Field/date.html
+++ b/tpl/UI/Component/Form/Field/date.html
@@ -1,6 +1,6 @@
-<label for="{$ID}" class="glyphicon glyphicon-th">{$LABEL}</label>
+<label for="{$ID}">{$LABEL}</label>
 <div id="datepicker{$ID}" class="input-group date">
-  {$INPUT}<span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+  {$INPUT}<span class="input-group-addon input-group-text"><i class="bi-calendar3"></i></span>
 </div>
 <script type="text/javascript">
   (function($){
