--- a/tpl/UI/Component/Form/container.html
+++ b/tpl/UI/Component/Form/container.html
@@ -1,5 +1,5 @@
 <form id="{$ID}" name="{$NAME}" action="{$ACTION}" method="post" enctype="application/x-www-form-urlencoded">
-    <div class="container formContainer">
+    <div class="formContainer">
     {if $LABEL}
         <div class="formLabel">{$LABEL}</div>
     {/if}
