--- a/tpl/UI/Layout/Panel/primary.html
+++ b/tpl/UI/Layout/Panel/primary.html
@@ -1,4 +1,4 @@
-<div class="container layoutPanel">
+<div class="container layoutPanelPrimary {$CLASSES}">
   {if $HEADER}<div class="layoutPanelHeader">{$HEADER}</div>{/if}
   <div class="layoutPanelContent">{$CONTENT}</div>
 </div>
