--- a/css/iit-ui.css
+++ b/css/iit-ui.css
@@ -161,7 +161,7 @@ table td, table th {
 
 fieldset {
     border-radius: 8px;
-    border: solid 1px #747474;
+    border: solid 1px #a7abad;
     margin: 25px 0 25px 0;
     padding: 0 25px 0 25px;
     padding-top: 10px;
