--- a/css/iit-ui.css
+++ b/css/iit-ui.css
@@ -38,7 +38,7 @@ body {
 
 .layoutPanelSecondary {
     padding: 15px 25px;
-    margin: 15px 0 15px 0;
+    margin: 0 0 15px 0;
     background-color: #ebf1ff;
     border: solid 2px #a7abad;
     border-radius: 8px;
@@ -52,7 +52,7 @@ body {
         max-width: 350px;
     }
     .container.large {
-        max-width: 620px;
+        max-width: 720px;
     }
 }
 
@@ -64,7 +64,7 @@ body {
         max-width: 530px;
     }
     .container.large {
-        max-width: 900px;
+        max-width: 1000px;
     }
 }
 
@@ -76,7 +76,7 @@ body {
         max-width: 770px;
     }
     .container.large {
-        max-width: 1140px;
+        max-width: 1240px;
     }
 }
 
@@ -88,7 +88,7 @@ body {
         max-width: 950px;
     }
     .container.large {
-        max-width: 1320px;
+        max-width: 1420px;
     }
 }
 
@@ -100,7 +100,7 @@ body {
         max-width: 1130px;
     }
     .container.large {
-        max-width: 1500px;
+        max-width: 1600px;
     }
 }
 
