--- a/tpl/UI/Component/Presentation/item.html
+++ b/tpl/UI/Component/Presentation/item.html
@@ -3,3 +3,6 @@
 {if $PROPERTIES}
 	<hr /><div class="itemProperties">{$PROPERTIES}</div>
 {/if}
+{foreach $CONTENTS as $CONTENT}
+	<hr /><div class="itemContent">{$CONTENT}</div>
+{/foreach}
