--- a/tpl/UI/Component/Presentation/listing.html
+++ b/tpl/UI/Component/Presentation/listing.html
@@ -1,4 +1,7 @@
 <div class="presentationListing">
+	{if $TITLE}
+		<div class="presentationTitle">{$TITLE}</div>
+	{/if}
 	{foreach $ITEMS as $ITEM}
 		<div class="presentationItem {cycle values='odd,even'}">
 			{$ITEM->render()}
