--- a/css/iit-ui.css
+++ b/css/iit-ui.css
@@ -157,6 +157,7 @@ table td, table th {
 .formContainer {
     width: 100%;
 }
+
 .formLabel {
     font-size: 1.2em;
     border-bottom: solid 1px #747474;
@@ -167,9 +168,11 @@ table td, table th {
 fieldset {
     border-radius: 8px;
     border: solid 1px #a7abad;
+    border: 1px solid #b4b9c9;
     margin: 25px 0 25px 0;
     padding: 0 25px 0 25px;
     padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 fieldset > legend {
@@ -180,6 +183,11 @@ fieldset > legend {
     font-size: 1em;
     background-color: #ebf1ff;
 }
+
+.presentationListing .presentationItem fieldset > legend {
+    background-color: #ffffff;
+}
+
 
 fieldset > legend + * {
     clear: both;
@@ -199,7 +207,7 @@ div.dropdown a img {
 
 /* PRESENTATION LISTING */
 
-.itemTitle, .propertyLabel {
+.itemTitle, .propertyLabel, .presentationTitle {
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -209,8 +217,8 @@ div.dropdown a img {
 }
 
 .presentationItem {
-    border-radius: 8px;
-    border: 1px solid #ced4da;
+    border-radius: 24px;
+    border: 1px solid #b4b9c9;
     margin: 25px 0 25px 0;
     padding: 15px;
 }
