--- a/tpl/UI/Component/Form/container.html
+++ b/tpl/UI/Component/Form/container.html
@@ -1,4 +1,4 @@
-<form id="{$ID}" name="{$NAME}" action="{$ACTION}" method="post" enctype="application/x-www-form-urlencoded">
+<form class="{$CSS_CLASSES}" id="{$ID}" name="{$NAME}" action="{$ACTION}" method="post" enctype="application/x-www-form-urlencoded">
     <div class="formContainer">
     {if $LABEL}
         <div class="formLabel">{$LABEL}</div>
