--- a/css/iit-ui.css
+++ b/css/iit-ui.css
@@ -203,17 +203,24 @@ fieldset > legend + * {
 .chosen-container-active .chosen-single,
 .chosen-container-active.chosen-with-drop .chosen-single,
 .chosen-container-active.chosen-with-drop .chosen-drop {
-    border-color: #66afe9;
+
     outline: 0;
-    -webkit-box-shadow: inset 0 3px 3px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
-    box-shadow: inset 0 3px 3px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
     border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    border-color: #66afe9;
+    box-shadow: inset 5px 0 5px rgba(0,0,0,.075), 5px 0 5px rgba(102,175,233,.6);
+    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,.075),0 0 5px rgba(102,175,233,.6);
+
+    transition-delay: 0s, 0s;
+    transition-duration: 0.15s, 0.15s;
+    transition-property: border-color, box-shadow;
+    transition-timing-function: ease-in-out, ease-in-out;
 }
 
 .chosen-container-single .chosen-single,
 .chosen-container-active.chosen-with-drop .chosen-single {
     background: none;
+    background-color: #ffffff;
+    border-color: #ced4da
 }
 
 .chosen-container-single .chosen-single {
