--- a/tpl/UI/Component/Form/Field/currency.html
+++ b/tpl/UI/Component/Form/Field/currency.html
@@ -1,4 +1,4 @@
-<label for="{$ID}">{$LABEL}</label>
+<label for="{$ID}" class="formLabel">{$LABEL}</label>
 <div class="input-group">
   <span class="input-group-text">{$CURRENCY}</span>
   {$INPUT}
