--- a/tpl/UI/Component/Form/Field/date.html
+++ b/tpl/UI/Component/Form/Field/date.html
@@ -1,4 +1,4 @@
-<label for="{$ID}">{$LABEL}</label>
+<label for="{$ID}" class="formLabel">{$LABEL}</label>
 <div id="datepicker{$ID}" class="input-group date">
   {$INPUT}<span class="input-group-addon input-group-text"><i class="bi-calendar3"></i></span>
 </div>
